--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 title = "Notre-Dame de Paris"
 baseURL = "/"
 languageCode = "en-us"
-theme = "gohugo-theme-ananke"
+theme = "gohugo-theme-ananke-master"
 
 MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
