--- a/site/config.toml
+++ b/site/config.toml
@@ -10,6 +10,9 @@ Paginate = 3 # this is set low for demonstrating with dummy content. Set to a hi
 googleAnalytics = ""
 enableRobotsTXT = true
 
+[permalinks]
+  posts = "/:title/"
+
 [sitemap]
   changefreq = "monthly"
   priority = 0.5
