--- a/site/themes/gohugo-theme-ananke-master/theme.toml
+++ b/site/themes/gohugo-theme-ananke-master/theme.toml
@@ -13,3 +13,6 @@ min_version = "0.30.2"
 [author]
   name = "Bud Parr"
   homepage = "https://github.com/budparr"
+
+[permalinks]
+  posts = "/:year/:month/:title/"
