--- a/site/config.toml
+++ b/site/config.toml
@@ -31,5 +31,6 @@ enableRobotsTXT = true
   mastodon = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
+  body_classes = "avenir bg-white"
   featured_image = "/images/gohugo-default-sample-hero-image.jpg"
   recent_posts_number = 2
