--- a/site/config.toml
+++ b/site/config.toml
@@ -18,6 +18,10 @@ enableRobotsTXT = true
   priority = 0.5
   filename = "sitemap.xml"
 
+[[related.indices]]
+name = "tags"
+weight = 100
+
 [params]
   favicon = ""
   description = "The last theme you'll ever need. Maybe."
